fix: 補上遺漏的 "消費滿 $750，多送 150 點" 規則

--- a/index.ejs
+++ b/index.ejs
@@ -140,7 +140,7 @@
 								<td class="number"><%= log.day %></td>
 								<td>
 									<span class="number">$</span>
-									<span class="number"><%= (log.point * 5).toLocaleString() %></span>
+									<span class="number"><%= log.pay.toLocaleString() %></span>
 								</td>
 								<td><span class="number"><%= log.point.toLocaleString() %></span></td>
 								<td><span class="number"><%= log.totalPoint.toLocaleString() %></span></td>
